samples/_failures_safe/1761634514_5ac71b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ccaab67.c: In function ‘main’:
./samples/SAFE/__tmp_8ccaab67.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8ccaab67.c:139:9: error: expected declaration or statement at end of input
